add methods to objectvalue pointed path manipulator